data aug half complete

--- a/deepLearning/数据增强之图像.md
+++ b/deepLearning/数据增强之图像.md
@@ -67,7 +67,126 @@ rot90(
 - 180度和上面的 水平&垂直翻转 效果一样
 - 根据实际场景决定可以增加哪些角度
 
+# 2 裁剪缩放
+这里的裁剪其真实的处理办法还应该包括padding
 
+## 裁剪
+cv2中图像以ndarray格式表示，所以分片可以直接达到裁剪的效果
+```
+h, w = img.shape[:2]
+center_w, center_h = w/2, h/2
+top, bottom = center_h - 200, center_h + 200
+left, right = center_w - 150, center_w + 150
+cropped = img[top : bottom, left : right]
+```
+对应tf的函数
+``` py
+# tf.image.crop_to_bounding_box
+crop_to_bounding_box(
+    image,
+    offset_height,
+    offset_width,
+    target_height,
+    target_width
+)
+```
+- image: 4-D Tensor of shape [batch, height, width, channels]  
+or 3-D Tensor of shape [height, width, channels]
+- offset_height: 对应cv2例子代码里的 top
+- offset_width: 对应left
+- target_height: 垂直方向尺寸 cv例子代码里的 +-150
+- target_width: 水平方向尺寸 cv例子代码里的 +-200
+
+另外还有 `tf.image.central_crop` 除了输入image外只有一个 `比例` 参数，表示输出宽和高相对输入的比例
+
+## padding
+copyMakeBorder()
+``` py
+dst = cv.copyMakeBorder(src, top, bottom, left, right, borderType[, dst[,
+value]])
+dst = cv.copyMakeBorder(src, top, bottom, left, right, borderType, None, value)
+```
+The arguments are:
+- src: Source image
+- dst: Destination image
+- top, bottom, left, right: Length in pixels of the borders at each side of the image
+- borderType: Define what type of border is applied
+- value: If borderType is BORDER_CONSTANT, this is the value used to fill the border pixels.
+
+borderType 取值(常用值)
+
+value | meaning
+:-:|-
+cv2.BORDER_CONSTANT | value 指定填充像素值
+cv2.BORDER_REFLECT | 以边界为轴镜像
+cv2.BORDER_REPLICATE| 重复最后一个元素
+
+对应 tf.image.pad_to_bounding_box
+``` py
+pad_to_bounding_box(
+    image,
+    offset_height,
+    offset_width,
+    target_height,
+    target_width
+)
+```
+image 是输入 tensor，4d 3d都可以
+`offset_*`两个参数为分别在上侧和左侧添加的行数和列数  
+`target_*` 两个参数为输出的尺寸，也就是说下侧和右边添加的厚度是根据这两个参数来计算  
+填充的像素值为0
+
+## 缩放
+``` py
+res = cv2.resize(img, None, fx=2, fy=2, interpolation = cv.INTER_CUBIC)
+# OR
+height, width = img.shape[:2]
+res = cv.resize(img,(2*width, 2*height), interpolation = cv.INTER_CUBIC)
+```
+推荐 缩小用cv.INTER_AREA，放大用cv.INTER_CUBIC (slow)或者cv.INTER_LINEAR。默认是cv.INTER_LINEAR
+
+# combo
+## .1 缩小
+正方形方便旋转90度，所以缩小训练集图像尺寸可以这么处理，
+### (1) resize & padding
+宽高都按比例 `dst_sz / max(w, h)` 缩小，然后pad短边使图像成为正方形
+``` py
+dst_sz = 32
+for img_name in namelist:
+  img = cv.imread(img_name)
+  src_h, src_w = img.shape[:2]
+  top = bottom = left = right = 0
+  if src_w > src_h:
+    dst_w = dst_sz:
+    dst_h = dst_w * src_h // src_w
+
+    padding = dst_sz - dst_h
+    top = padding//2
+    bottom = padding - top
+  else:
+    dst_h = dst_sz
+    dst_w = dst_h * src_w // src_h
+
+    padding = dst_sz - dst_w
+    left = padding//2
+    right = padding - left
+
+  img = cv.resize(img, (dst_w, dst_h), interpolation = cv.INTER_AREA)
+  img = cv.copyMakeBorder(img, top, bottom, left, right,
+      cv2.BORDER_CONSTANT, value=(0,0,0))
+```
+
+### (2) resize&crop
+缩小和裁剪的顺序可以互换, 最后使得长宽相等就ok
+
+### 对比
+- 方案(1)
+
+  padding引入了新的像素，导致计算量和mem占用增加，但是原始图像的像素都保留了，处理工程不需要人工干预
+
+- 方案(2)
+
+  需要人为的选取保留区域，否则可能会丢失关键像素，图像数量很大时，就费事费力，不过相应带来的优势是，关键像素占比相比原始图像更高，图像价值升高
 
 # reference
 数据增强 data augmentation  
@@ -76,3 +195,11 @@ openCV—Python(5)——	图像几何变换
 <http://blog.csdn.net/jnulzl/article/details/47057673>  
 Images  
 <https://www.tensorflow.org/api_guides/python/image#Flipping_Rotating_and_Transposing>  
+python进行opencv开发----简单的图片操作  
+<http://blog.csdn.net/jazywoo123/article/details/17231469>  
+Adding borders to your images  
+<https://docs.opencv.org/3.4.0/dc/da3/tutorial_copyMakeBorder.html>  
+copyMakeBorder()  
+<https://docs.opencv.org/3.4.0/d2/de8/group__core__array.html#ga2ac1049c2c3dd25c2b41bffe17658a36>  
+Geometric Transformations of Images  
+<https://docs.opencv.org/3.4.0/da/d6e/tutorial_py_geometric_transformations.html>  
