--- a/LinuxKernel/进程调度.md
+++ b/LinuxKernel/进程调度.md
@@ -68,6 +68,16 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 
 完全公平调度 CFS 是针对普通进程的调度类。
 
+# schedule() 函数
+实现调度程序。它会从运行队列的链表里找到一个进程，并随后将cpu分配给这个进程。可由几个内核控制路径调用，可以直接调用或者延迟调用。
+
+## 直接调用
+- 1 将 current 进程插入适当的等待队列
+- 2 把 current 进程状态改为 `TASK_INTERRUPTIBLE` 或 `TASK_UNINTERRUPTIBLE`
+- 3 调用 schedule()
+- 4 检查资源是否可用，不可用就转到 2
+- 5 资源可用，就从等待队列删除 current
+
 # reference
 Linux内核设计与实现 第三版  
 深入理解Linux内核 第三版  
