--- a/LinuxKernel/进程调度.md
+++ b/LinuxKernel/进程调度.md
@@ -78,6 +78,67 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 - 4 检查资源是否可用，不可用就转到 2
 - 5 资源可用，就从等待队列删除 current
 
+## schedule 主框架
+- 1 确定当前就绪队列, 保存当前活动进程的 task_struct*
+- 2 检查死锁,关闭内核抢占后调用 __schedule 完成内核调度
+- 3 恢复抢占,检查当前进程是否设置了重调度标志 TIF_NEED_RESCHED, 如果被设置，则重新调度
+
+### __schedule 主框架
+``` c
+/*  ==1==  
+        找到当前cpu上的就绪队列rq
+        并将正在运行的进程curr保存到prev中  */
+  cpu = smp_processor_id();
+  rq = cpu_rq(cpu);
+  prev = rq->curr;
+  /*  挑选一个优先级最高的任务将其排进队列  */
+  next = pick_next_task(rq, prev);
+  /*  如果prev和next非同一个进程  */
+  if (likely(prev != next))
+  {
+    rq->nr_switches++;  /*  队列切换次数更新  */
+    rq->curr = next;    /*  将next标记为队列的curr进程  */
+    ++*switch_count;    /* 进程切换次数更新  */
+
+    trace_sched_switch(preempt, prev, next);
+    /*  进程之间上下文切换    */
+    rq = context_switch(rq, prev, next); /* unlocks the rq */
+  }
+  else    /*  如果prev和next为同一进程，则不进行进程切换  */
+  {
+    lockdep_unpin_lock(&rq->lock);
+    raw_spin_unlock_irq(&rq->lock);
+  }
+
+  balance_callback(rq);
+```
+### pick_next_task选择抢占的进程
+``` c
+```
+### context_switch 进程上下文切换
+- 1 挂起一个进程，将这个进程在 CPU 中的状态（上下文）存储于内存中的某处，
+- 2 在内存中检索下一个进程的上下文并将其在 CPU 的寄存器中恢复
+- 3 跳转到程序计数器所指向的位置（即跳转到进程被中断时的代码行），以恢复该进程
+
+context_switch( )函数建立next进程的地址空间。进程描述符的active_mm字段指向进程所使用的内存描述符，而mm字段指向进程所拥有的内存描述符。对于一般的进程，这两个字段有相同的地址，但是，内核线程没有它自己的地址空间而且它的 mm字段总是被设置为 NULL
+
+主要操作，两个函数都是体系结构相关的
+- 调用 switch_mm(), 把虚拟内存从一个进程映射切换到新进程中
+- 调用 switch_to(),从上一个进程的处理器状态切换到新进程的处理器状态。这包括保存、恢复栈信息和寄存器信息
+
+### switch_mm 切换进程虚拟地址空间
+switch_mm主要完成了进程prev到next虚拟地址空间的映射, 由于内核虚拟地址空间是不许呀切换的, 因此切换的主要是用户态的虚拟地址空间
+
+主要工作就是切换了进程的CR3
+> 控制寄存器（CR0～CR3）用于控制和确定处理器的操作模式以及当前执行任务的特性  
+CR0中含有控制处理器操作模式和状态的系统控制标志；  
+CR1 保留不用；  
+CR2 含有导致页错误的线性地址；  
+CR3 中含有页目录表物理内存基地址，因此该寄存器也被称为页目录基地址寄存器PDBR  （Page-Directory Base address Register）。
+
+### switch_to 切换进程堆栈和寄存器
+
 # reference
 Linux内核设计与实现 第三版  
 深入理解Linux内核 第三版  
+<https://blog.csdn.net/gatieme/article/details/51872594>  
