switch_to add description

--- a/LinuxKernel/进程调度.md
+++ b/LinuxKernel/进程调度.md
@@ -137,7 +137,8 @@ CR2 含有导致页错误的线性地址；
 CR3 中含有页目录表物理内存基地址，因此该寄存器也被称为页目录基地址寄存器PDBR  （Page-Directory Base address Register）
 
 ### switch_to 切换进程堆栈和寄存器
-``` x86asm
+x86asm
+``` c
 /*
  * Saving eflags is important. It switches not only IOPL between tasks,
  * it also protects other tasks from NT leaking through sysenter etc.
@@ -157,11 +158,15 @@ do {									\
 		     "pushl %%ebp\n\t"		/* save    EBP   */	\
 		     "movl %%esp,%[prev_sp]\n\t"	/* save    ESP   */ \
 		     "movl %[next_sp],%%esp\n\t"	/* restore ESP   */ \
+			 // 切换到 next 的栈顶
 		     "movl $1f,%[prev_ip]\n\t"	/* save    EIP   */	\
 		     "pushl %[next_ip]\n\t"	/* restore EIP   */	\
+			 // EIP 压栈
 		     __switch_canary					\
 		     "jmp __switch_to\n"	/* regparm call  */	\
+			 // 不同于 call func，不会把下一行EIP压栈，但是返回时会把栈顶元素pop 到 eip 上，完成 eip 的修改
 		     "1:\t"						\
+			 // 恢复栈底和 eflags
 		     "popl %%ebp\n\t"		/* restore EBP   */	\
 		     "popfl\n"			/* restore flags */	\
 									\
