惊群 nginx do_fork

--- a/LinuxKernel/分页.md
+++ b/LinuxKernel/分页.md
@@ -20,7 +20,7 @@ EIP 寄存器的值，或者等同于逻辑地址的offset
 
 ## Linux 设定
 内核将所有段基址设成0，段限长到最大值(涉及段描述符结构，理解成地址总线最大寻址限度)，导致所有段重合，即不分段，  
-于是虚拟地址和逻辑地址值就相等了
+于是虚拟地址和线性地址值就相等了
 
 # 4 级分页模型
 linux采用了一种同时适用于 32 位和 64位系统的普通分页模型
@@ -28,6 +28,8 @@ linux采用了一种同时适用于 32 位和 64位系统的普通分页模型
 - 页上级目录 upper  = 9 bit
 - 页中间目录 middle  = 9 bit
 - 页表 page table  = 9 bit
+
+![](https://images0.cnblogs.com/blog2015/624196/201508/162119168016989.png)
 
 ![](https://images0.cnblogs.com/blog2015/624196/201508/162118543952835.png)
 
@@ -53,6 +55,21 @@ linux采用了一种同时适用于 32 位和 64位系统的普通分页模型
 
 当MAXPHYADDR为36位时，上一级table entry的12~35位提供下一级table物理基地址的高24位，此时36~51是保留位，必须置0，低12位补零，达到基地址在4K边界对齐
 
+# 地址转换
+将线性地址转换为物理地址，借助 `MMU (Memory Manage Unit)`  
+如果MMU存在且启用，CPU执行单元产生的地址信号在发送到内存芯片之前将被MMU截获，这个地址信号称为虚拟地址（virtual address），简称VA，  
+MMU会负责把VA翻译成另一个地址，然后发到内存芯片地址引脚上，即VA映射成PA，如下图:  
+![](https://img-blog.csdn.net/20140213171831484?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvaXBtdXg=/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)  
+
+MMU 在一次虚拟地址转换转换到物理地址的过程中，会查询多次页目录和一次页表(比如上面4级就一共4次)，  
+但如果MMU每次地址转换都到位于外部内存的页上查找PTE，转换速度就会大大降低，于是出现了 TLB
+
+## TLB
+TLB (Translation Lookaside Buffers)即转换快表，又简称快表，可以理解为MMU内部专用的存放页表的cache，  
+保存着最近使用的PTE乃至全部页表。MMU接收到虚拟地址后，  首先在TLB中查找，如果找到该VA对应的PTE就直接转换，  
+找不到再去外存页表查找，并置换进TLB。TLB属于片上SRAM，访问速度快，通过TLB缓存PTE可以节省MMU访问外存页表的时间，  
+从而加速虚实地址转换。TLB和CPU cache的工作原理一样，只是TLB专用于为MMU缓存页表。
+
 # 进程页表
 x86
 - 0x0 到 0xbfff ffff 的线性地址，无论进程中用户态还是内核态都可以寻址
@@ -65,6 +82,9 @@ x64
 0x0 ~ 0x0000,7ffff,ffff,ffff = 128TB | 用户空间
 0xffff,8000,0000,0000 ~ 全F = 128TB  | 系统空间
 
+
+线程能共享进程的各种变量，如果线性地址相同，那么 cr3 也要相同？
+
 # reference
 Linux 线性地址，逻辑地址和虚拟地址的关系？  
 <https://www.zhihu.com/question/29918252>  
@@ -72,3 +92,7 @@ Linux x86_64与i386区别之 —— 内存寻址
 <https://blog.csdn.net/yunsongice/article/details/5821734>  
 x64 结构体系下的内存寻址  
 <http://www.cnblogs.com/lanrenxinxin/p/4735027.html>  
+硬件篇之MMU  
+<https://blog.csdn.net/ipmux/article/details/19167605>  
+[校招面试]Linux拓展知识列表彻底打动面试官拿下心仪Offer  
+<https://www.jianshu.com/p/6b79f6c61098>  
