--- a/LinuxKernel/进程调度.md
+++ b/LinuxKernel/进程调度.md
@@ -84,7 +84,7 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 - 3 恢复抢占,检查当前进程是否设置了重调度标志 TIF_NEED_RESCHED, 如果被设置，则重新调度
 
 ### __schedule 主框架
-``` c
+```
 /*  ==1==  
         找到当前cpu上的就绪队列rq
         并将正在运行的进程curr保存到prev中  */
@@ -112,8 +112,36 @@ F S   UID   PID  PPID  C PRI  NI ADDR SZ WCHAN  TTY          TIME CMD
 
   balance_callback(rq);
 ```
+
 ### pick_next_task选择抢占的进程
 ``` c
+/*
+ * Pick up the highest-prio task:
+ */
+static inline struct task_struct *
+pick_next_task(struct rq *rq)
+{
+	const struct sched_class *class;
+	struct task_struct *p;
+
+	/*
+	 * Optimization: we know that if all tasks are in
+	 * the fair class we can call that function directly:
+	 */
+	if (likely(rq->nr_running == rq->cfs.h_nr_running)) {
+		p = fair_sched_class.pick_next_task(rq);
+		if (likely(p))
+			return p;
+	}
+
+	for_each_class(class) {
+		p = class->pick_next_task(rq);
+		if (p)
+			return p;
+	}
+
+	BUG(); /* the idle class will always have a runnable task */
+}
 ```
 ### context_switch 进程上下文切换
 - 1 挂起一个进程，将这个进程在 CPU 中的状态（上下文）存储于内存中的某处，
@@ -154,38 +182,47 @@ do {									\
 	 */								\
 	unsigned long ebx, ecx, edx, esi, edi;				\
 									\
+	// volatile 确保编译器不在 asm 内部优化指令
+	// \n 定界符结尾
+	// \t 增加 GCC 在汇编文件中生成的指令的可读性
 	asm volatile("pushfl\n\t"		/* save    flags */	\
 		     "pushl %%ebp\n\t"		/* save    EBP   */	\
 		     "movl %%esp,%[prev_sp]\n\t"	/* save    ESP   */ \
+		/* 切换到 next 的栈顶 */        \
 		     "movl %[next_sp],%%esp\n\t"	/* restore ESP   */ \
-			 // 切换到 next 的栈顶
+		/* label 1 位置的地址保存到当前线程信息的ip字段 */  \
+		/* 用于下次这个线程被调度时恢复 ip 用 */         \
+		/* f 表示 forward 跳转, b 表示 back */         \
 		     "movl $1f,%[prev_ip]\n\t"	/* save    EIP   */	\
 		     "pushl %[next_ip]\n\t"	/* restore EIP   */	\
-			 // EIP 压栈
+			 /* EIP 压栈 */                   \
 		     __switch_canary					\
 		     "jmp __switch_to\n"	/* regparm call  */	\
-			 // 不同于 call func，不会把下一行EIP压栈，但是返回时会把栈顶元素pop 到 eip 上，完成 eip 的修改
+		/* 不同于 call func，不会把下一行EIP压栈，但是返回时会把栈顶元素pop 到 eip 上 */       \
+		/* 完成 eip 的修改 */      \
 		     "1:\t"						\
-			 // 恢复栈底和 eflags
+		// 恢复栈底和 eflags
 		     "popl %%ebp\n\t"		/* restore EBP   */	\
 		     "popfl\n"			/* restore flags */	\
 									\
 		     /* output parameters */				\
 		     : [prev_sp] "=m" (prev->thread.sp),		\
-         /*m表示把变量放入内存，即把[prev_sp]存储的变量放入内存，最后再写入prev->thread.sp*/\
+		/* m 表示把变量放入内存，即把[prev_sp]存储的变量放入内存，最后再写入prev->thread.sp  */              \
+		 /* = 表示是输出操作数 */            \
 		       [prev_ip] "=m" (prev->thread.ip),		\
 		       "=a" (last),					\
-           /*=表示输出,a表示把变量last放入ax,eax = last*/         \
+		/* = 表示输出,a表示把变量last放入ax,eax = last */         \
 									\
 		       /* clobbered output registers: */		\
 		       "=b" (ebx), "=c" (ecx), "=d" (edx),		\
-           /*b 变量放入ebx,c表示放入ecx，d放入edx,S放入si,D放入edi*/\
+		/* b 变量放入ebx,c表示放入ecx，d放入edx,S放入si,D放入edi* /\
 		       "=S" (esi), "=D" (edi)				\
 		       							\
 		       __switch_canary_oparam				\
 									\
 		       /* input parameters: */				\
 		     : [next_sp]  "m" (next->thread.sp),		\
+		/* 没有 = 表示输入操作数 */     \
 		       [next_ip]  "m" (next->thread.ip),		\
 		       							\
 		       /* regparm parameters for __switch_to(): */	\
@@ -195,12 +232,25 @@ do {									\
 		       __switch_canary_iparam				\
 									\
 		     : /* reloaded segment registers */			\
+		/* 列出要用到的操作数，或者内存 mem */    \
 			"memory");					\
 } while (0)
 ```
-
-
-
+`__switch_to` 函数 上面 jmp 那行的跳转目标
+``` c
+/*
+ *	switch_to(x,y) should switch tasks from x to y.
+ *
+ * This could still be optimized:
+ * - fold all the options into a flag word and test it with a single test.
+ * - could test fs/gs bitsliced
+ *
+ * Kprobes not supported here. Set the probe on schedule instead.
+ * Function graph tracer not supported too.
+ */
+__notrace_funcgraph struct task_struct *
+__switch_to(struct task_struct *prev_p, struct task_struct *next_p)
+```
 
 # reference
 Linux内核设计与实现 第三版  
@@ -210,3 +260,9 @@ Linux内核设计与实现 第三版
 <http://www.cnblogs.com/visayafan/archive/2011/12/10/2283660.html>  
 Linux C编程--进程调度schedule  
 <https://zhuanlan.zhihu.com/p/32296570>  
+Linux 中 x86 的内联汇编  
+<https://www.ibm.com/developerworks/cn/linux/sdk/assemble/inline/index.html>  
+linux内核任务切换switch_to中关于movl $1f,%1的解释  
+<http://bbs.chinaunix.net/thread-2052199-1-1.html>  
+汇编指令  
+<http://www.cnblogs.com/lxgeek/archive/2011/01/01/1923738.html>  
