增加 workqueue 源码走读

--- a/LinuxKernel/进程调度.md
+++ b/LinuxKernel/进程调度.md
@@ -155,7 +155,7 @@ context_switch( )函数建立next进程的地址空间。进程描述符的activ
 - 调用 switch_to(),从上一个进程的处理器状态切换到新进程的处理器状态。这包括保存、恢复栈信息和寄存器信息
 
 ### switch_mm 切换进程虚拟地址空间
-switch_mm主要完成了进程prev到next虚拟地址空间的映射, 由于内核虚拟地址空间是不许呀切换的, 因此切换的主要是用户态的虚拟地址空间
+switch_mm主要完成了进程prev到next虚拟地址空间的映射, 由于内核虚拟地址空间是不需要切换的, 因此切换的主要是用户态的虚拟地址空间
 
 主要工作就是切换了进程的CR3
 > 控制寄存器（CR0～CR3）用于控制和确定处理器的操作模式以及当前执行任务的特性  
