数据库基础 范式 索引

--- a/database/数据库基础.md
+++ b/database/数据库基础.md
@@ -1,8 +1,36 @@
+# 范式
+- 1NF 无重复的列
+  > 实体中的某个属性不能有多个值或者不能有重复的属性,不满足第一范式（1NF）的数据库就不是关系数据库
+- 2NF 消除部分子函数依赖
+  > 非主属性完全依赖于主关键字。不满足的话就会存在以下问题
+  - 数据冗余
+  - 更新异常
+  - 插入异常
+  - 删除异常
+- 3NF 消除传递依赖
+  > 不包含已在其它表中已包含的非主关键字信息
+
+- BCNF 3NF的改进形式
 
 # 索引
+数据库系统还维护着满足特定查找算法的数据结构，这些数据结构以某种方式引用（指向）数据，这样就可以在这些数据结构上实现高级查找算法
+
+MySQL官方对索引的定义为：索引（Index）是帮助MySQL高效获取数据的数据结构。提取句子主干，就可以得到索引的本质：索引是数据结构
+## 
+
+
+
+## B+Tree
+MySQL 存储引擎的默认索引类型
 
 # 视图
 
 # reference
+数据库范式（1NF 2NF 3NF BCNF）详解  
+<https://blog.csdn.net/ljp812184246/article/details/50706596>  
 数据库索引类型及实现方式  
 <https://blog.csdn.net/sdgihshdv/article/details/75039825>
+数据库索引原理及优化
+<https://blog.csdn.net/suifeng3051/article/details/52669644>  
+面试/笔试第三弹 —— 数据库面试问题集锦  
+<https://blog.csdn.net/justloveyou_/article/details/78308460>  
