数据库基础

--- a/database/数据库基础.md
+++ b/database/数据库基础.md
@@ -16,12 +16,35 @@
 数据库系统还维护着满足特定查找算法的数据结构，这些数据结构以某种方式引用（指向）数据，这样就可以在这些数据结构上实现高级查找算法
 
 MySQL官方对索引的定义为：索引（Index）是帮助MySQL高效获取数据的数据结构。提取句子主干，就可以得到索引的本质：索引是数据结构
-## 
-
-
+## B-tree
+平衡多路搜索树
 
 ## B+Tree
-MySQL 存储引擎的默认索引类型
+MySQL InnoDB 存储引擎的默认索引实现， 两个指针一个根节点，一个最小节点
+
+![](http://static.zybuluo.com/Rico123/ynugdx0avoy5blfq6gkb0tv2/3%E9%98%B6B+%E6%A0%91.jpg)
+
+- 查询效率更加稳定
+  > 关键字查询的路径长度相同，每一个数据的查询效率相当
+- 数据库基于范围的查询非常频繁
+  > B树要中序遍历，B+只需要遍历叶子节点
+
+# 事务
+特征 ACID
+
+并发带来的问题
+- 脏读
+  > 一个事务读取了另一个事务未提交的数据 (rollback)
+- 不可重复读
+  > 
+- 幻读
+
+# 存储引擎
+## InnoDB
+支持ACID事务、行级锁、并发
+
+## MyISAM
+不支持事务，用于只读程序提高性能
 
 # 视图
 
